# AI-tutor

./: index.py
app/conversational_agent/: Dockerfile  agent.py  pyproject.toml  rag.py  requirements.txt  server.py  server_backup.py  test_grpc.py  test_rag.py
app/conversational_agent/__tests__/: audio_text.txt  conftest.py  mock_deps.py  test_conversation.py  test_dependency_injection.py  test_grpc.py  test_rag.py  test_stream_complete_sentence_delivery.py  test_stream_conversation_history_compression.py  test_stream_grpc_servicer_ready_signal_interrupt_forwarding.py  test_stream_inter_sentence_silence_t03.py  test_stream_interrupt_handling.py  test_stream_language_detection.py  test_stream_lesson_end_token_signaling_t08.py  test_stream_llm_streaming_sentence_chunked_tts_flow.py  test_stream_lower_latency_defaults_t05.py  test_stream_new_patch_regressions.py  test_stream_reduced_vad_silence_thresholds.py  test_stream_russian_tts_integration.py  test_stream_russian_tts_routing.py  test_stream_sentence_splitting.py  test_stream_silero_vad_audio_processor.py  test_stream_tempo_strategy_classification_and_prosody_shaping.py  test_stream_timing_aware_turn_decision_policy.py  test_stream_timingawareturngate_wait_vs_respond_force_reply_on_silence.py  test_stream_tts_queueing.py  test_stream_voice_gender_in_system_messages_t07.py  test_stream_vosk_integration.py  test_stream_vosk_streaming_stt.py  test_streaming.py  test_stt_accuracy.py
app/conversational_agent/core/: __init__.py  audio_processor.py  config.py  conversation.py  grpc_servicer.py  lesson_manager.py  prompts.py  (+8 more)
(+92 files in other folders)
