[project]
name = "conversational-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.78.1",
    "openai>=2.24.0",
    "pocket-tts>=1.1.1",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.5",
    "torch>=2.10.0",
    "chromadb>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["__tests__"]
pythonpath = ["."]
markers = [
    "integration: end-to-end tests that exercise the running gRPC service",
]
